change media query to fix horiz scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1110,7 +1110,7 @@
  ============================================================
  */
 
-   @media all and (max-width: 1074px) {
+   @media all and (max-width: 1105px) {
       html {
          font-size: 87.5%; /* 14px */
       }       
